big stuff ya know?

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <canvas id="cvs" height="600" width="800"></canvas>
+    <canvas id="cvs" height="550" width="800"></canvas>
+    <p id="test"></p>
     <script src="update.js"></script>
     <script src="draw.js"></script>
-    <script src="script.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
